{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "5bc5c7be-6d6a-4f3f-9b28-6f2250bfbf85",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "b2fbc5c2-43bb-4d8f-911d-d9f52ae8ee2c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "Value",
                    "id": "f3c3d5a2-7237-49f0-8919-bd21b8717887",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryContact",
                    "type": "Button",
                    "id": "2a7a7ce9-4f6b-4b5a-9e74-7a4a4b69bcdf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryPosition",
                    "type": "Value",
                    "id": "4f5a5f4e-b02b-4f3a-86b0-27ddfb7f9dc7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5a8ac1b1-072d-4c49-9f59-2de69da15165",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a1b5d55-47d5-4af2-8619-b1bd75a55c59",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e95f0eb3-7a59-49dc-b032-1b7a033ab844",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a429e88-1085-41e9-b091-c0c3f09a55b1",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}